--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
 		"format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\""
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^7.1.0",
+		"@fortawesome/free-solid-svg-icons": "^7.1.0",
+		"@fortawesome/react-fontawesome": "^3.1.0",
+		"clsx": "^2.1.1",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"zod": "^4.1.13"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
@@ -31,6 +36,7 @@
 		"tailwindcss": "^4.1.17",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.47.0",
-		"vite": "^7.2.4"
+		"vite": "^7.2.4",
+		"vite-plugin-svgr": "^4.5.0"
 	}
 }
