--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "eslint .",
+		"lint": "biome check .",
+		"lint:fix": "biome check --write .",
 		"preview": "vite preview",
-		"format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
-		"format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\""
+		"format": "biome format --write .",
+		"format:check": "biome format .",
+		"check": "biome check .",
+		"check:write": "biome check --write ."
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^7.1.0",
@@ -21,21 +24,14 @@
 		"zod": "^4.1.13"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.39.1",
+		"@biomejs/biome": "^1.9.4",
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.6",
 		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^5.1.1",
-		"eslint": "^9.39.1",
-		"eslint-plugin-react-hooks": "^7.0.1",
-		"eslint-plugin-react-refresh": "^0.4.24",
-		"globals": "^16.5.0",
-		"prettier": "^3.6.2",
-		"prettier-plugin-tailwindcss": "^0.7.1",
 		"tailwindcss": "^4.1.17",
 		"typescript": "~5.9.3",
-		"typescript-eslint": "^8.47.0",
 		"vite": "^7.2.4",
 		"vite-plugin-svgr": "^4.5.0"
 	}
