--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Logs
 logs
 *.log
+bun-debug.log*
+lerna-debug.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
 node_modules
 dist
